Revert "fix forum post and message overflow"
This reverts commit 5db37c86230cb4d7fffd6194ff80d70a4e41791c.

--- a/ui/site/css/_message.scss
+++ b/ui/site/css/_message.scss
@@ -39,11 +39,12 @@
 .message-thread {
 
   h1 {
-    @extend %break-word-hard;
+    @extend %break-word;
+    overflow: hidden;
   }
 
   &__message {
-    @extend %break-word-hard;
+    @extend %break-word;
     font-size: 1.1em;
     margin-bottom: 2em;
     border-bottom: $border;
